--- a/public/under-maintenance.html
+++ b/public/under-maintenance.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha256-bZLfwXAP04zRMK2BjiO8iu9pf4FbLqX6zitd+tIvLhE=" crossorigin="anonymous" />
 	<link href="//fonts.googleapis.com/css?family=Titillium+Web:400,600|Orbitron:500|Noto+Sans:400,700&amp;subset=cyrillic,cyrillic-ext,devanagari,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
 	<link href="/css/style.min.css" rel="stylesheet">
-	<script defer src="https://use.fontawesome.com/releases/v6.4.2/js/all.js"></script>
+	<script defer src="https://use.fontawesome.com/releases/v6.7.2/js/all.js"></script>
 </head>
 
 <body role="document">
@@ -57,7 +57,7 @@
           <a class="social" href="https://twitter.com/lmmsio">
             <span class='fa-layers fa-fw fa-4x' data-toggle='tooltip' data-placement='top' title='{{ tooltip }}'>
           		<span class="fas fa-square" data-fa-transform="{{ transform }}"></span>
-              <span class="fab fa-twitter-square fa-inverse" data-fa-transform="shrink-6"></span>
+              <span class="fab fa-x-twitter fa-inverse" data-fa-transform="shrink-6"></span>
           	</span>
           </a>
           <a class="social" href="/chat">
